--- a/os-labirintos-do-inf.cbp
+++ b/os-labirintos-do-inf.cbp
@@ -124,6 +124,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="src/game.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/game.h" />
 		<Unit filename="src/graphics.c">
 			<Option compilerVar="CC" />
 		</Unit>
