Interface das perguntas

--- a/os-labirintos-do-inf.cbp
+++ b/os-labirintos-do-inf.cbp
@@ -141,6 +141,9 @@
 		<Unit filename="src/menu.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
+			<code_completion />
+			<envvars />
+			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
