--- a/os-labirintos-do-inf.cbp
+++ b/os-labirintos-do-inf.cbp
@@ -132,18 +132,25 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="src/graphics.h" />
+		<Unit filename="src/jogador.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/labirinto.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="src/main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="src/main.h" />
 		<Unit filename="src/menu.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="src/menu.h" />
+		<Unit filename="src/professor.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
-			<code_completion />
-			<envvars />
-			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
