--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/codeblocks,notepadpp,c
-# Edit at https://www.toptal.com/developers/gitignore?templates=codeblocks,notepadpp,c
-
-### C ###
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
 *.exe
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-
-### CodeBlocks ###
-# specific to CodeBlocks IDE
-*.layout
-*.depend
-# generated directories
-bin/
-obj/
-
-### NotepadPP ###
-# Notepad++ backups #
-*.bak
-
-# End of https://www.toptal.com/developers/gitignore/api/codeblocks,notepadpp,c
-
-### GNOME Builder ###
-*.build
+save.dat
